# trino-rust-client

./: Cargo.toml
src/: lib.rs
trino/: Cargo.toml
trino-codegen/: Cargo.toml  readme.md
trino-codegen/data/: explain.json  explain2.json  test_query.sql
trino-codegen/src/: explain.rs  lib.rs  main.rs  utils.rs
trino/src/: lib.rs
trino/tests/: integration_test.rs
xtask/: Cargo.toml  readme.md
xtask/src/: generated_struct.rs  lib.rs  main.rs
xtask/tests/: test_generated_struct.rs
