[package]
name = "trino_codegen"
version = "0.1.0"
authors = ["Will Eaton <me@wseaton.com>"]
edition = "2018"
description = "Generate Rust code from Trino SQL queries"
documentation = "https://docs.rs/trino"
readme = "README.md"
repository = "https://github.com/wseaton/trino-rust-client.git"
license = "Apache-2.0"
keywords = ["trinodb", "sql"]
categories = ["api-bindings", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trino-codegen"
path = "src/main.rs"

[lib]
name = "trino_codegen"
path = "src/lib.rs"


[dependencies]
trino = { path = "../trino" }

clap = { version = "4.4.7", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }

glob = "0.3.1"
rpassword = "7.2.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.40"


proc-macro2 = "1.0.69"
syn = "2.0.28"
quote = "1.0"
chrono = "*"
data-encoding = "2.4.0"
