[package]
name = "trino"
version = "0.1.0"
authors = ["Josh Howard <joshthoward@gmail.com>", "Will Eaton <me@wseaton.com>"]
edition = "2018"
description = "A simple TrinoDB client for Rust"
documentation = "https://docs.rs/trino"
readme = "README.md"
repository = "https://github.com/wseaton/trino-rust-client.git"
license = "Apache-2.0"
keywords = ["trinodb", "sql"]
categories = ["api-bindings", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.4.0"
reqwest = { version = "0.11.4", features = ["json", "blocking", "gzip"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
