[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xtask"
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
trino_codegen = { path = "../trino-codegen" }

chrono = "*"
uuid = { version = "*", features = ["v4", "serde"] }
data-encoding = "*"
bigdecimal = { version = "*", features = ["serde"] }
